# news-categorizer-transformer

./: .gitignore  Dockerfile  README.md  app.py  compose.yml  pyproject.toml  tuned_model.ipynb
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/info/: page.tsx
frontend/src/components/: CategoriesGrid.tsx  CategoryHistogram.tsx  Header.tsx  Tabs.tsx  WordImportance.tsx
