[project]
name = "news-categorizer-app"
version = "0.1.0"
description = ""
authors = [
    {name = "imghostman"}
]
readme = "README.md"
requires-python = "3.11.12"
dependencies = [
    "uvicorn (>=0.22.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "tensorflow (>=2.19.0,<3.0.0)",
    "transformers (>=4.51.3,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
